# fast-api

./: pyproject.toml
src/: admin.py  base_settings.py  main.py
src/catalogue/: repository.py  views.py
src/catalogue/models/: pydantic.py  repository.py  sqlalchemy.py
src/common/: service.py
src/common/databases/: postgres.py
src/common/exceptions/: base.py
src/common/repositories/: __init__.py  sqlalchemy_repo.py
src/common/schemas/: common.py
src/common/users/models/: sqlalchemy.py
src/orders/: admin.py
src/orders/models/: sqlalchemy.py
src/router/: view.py
